<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ghulam.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamA"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#616161"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_A_Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="56sp"
                android:text="@string/teamAScore"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePoints"
                android:textAllCaps="true"
                android:onClick="threePlusPointsTeamA"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPoints"
                android:textAllCaps="true"
                android:onClick="twoPlusPointsTeamA"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/freehit"
                android:textAllCaps="true"
                android:onClick="freeHitTeamA"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamB"
                android:gravity="center_horizontal"
                android:textColor="#616161"
                android:padding="4dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_B_Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamBScore"
                android:textSize="56sp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePoints"
                android:textAllCaps="true"
                android:onClick="threePlusPointsTeamB"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPoints"
                android:textAllCaps="true"
                android:onClick="twoPlusPointsTeamB"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/freehit"
                android:textAllCaps="true"
                android:onClick="freeHitTeamB"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

        </LinearLayout>
    </LinearLayout>


        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetButton"
            android:onClick="resetButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"/>




</RelativeLayout>
